# icon-example

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindNetCDF.cmake
legacy/: Makefile.am  README.md  autogen.sh  configure.ac
legacy/docker/: Dockerfile
legacy/src/: basic_operators.c  basic_operators.h  grid.c  grid.h
legacy/tests/: Makefile.am  global_div.benchmark.in  global_div.c  global_div.run.in  local_vel_filter.c  local_vel_filter.run.in
scripts/: anydsl_data.csv  anydsl_raw_data.csv  aurora_raw_data.csv  benchmark.sh  legacy_benchmark.sh  legacy_data.csv  legacy_raw_data.csv  plot.r
src/: anydsl.h  grid.h  grid.impala  ops.impala  utils.c  utils.h  utils.impala
src/be/: backend_amdgpu.impala  backend_avx.impala  backend_cpu.impala  backend_cuda.impala  backend_nvvm.impala  backend_opencl.impala  cpu_threads.h
tests/: global_div.c  local_vel_filter.c
